syntax = "proto3";

package resources.livemap;
option go_package = "github.com/galexrt/arpanet/proto/resources/livemap;livemap";

import "resources/timestamp/timestamp.proto";
import "validate/validate.proto";

message Marker {
  float x = 1; // @gotags: alias:"x"
  float y = 2; // @gotags: alias:"y"

  resources.timestamp.Timestamp updated_at = 3; // @gotags: alias:"updated_at"
}

message UserMarker {
  float x = 1; // @gotags: alias:"x"
  float y = 2; // @gotags: alias:"y"

  resources.timestamp.Timestamp updated_at = 3; // @gotags: alias:"updated_at"

  string job = 4 [(validate.rules).string.max_len = 20]; // @gotags: alias:"job"
  int32 user_id = 5 [(validate.rules).int32.gt = 0]; // @gotags: sql:"primary_key" alias:"user_id"

  string name = 6;
  string icon = 7;
  string popup = 8;
  string link = 9;
}
