syntax = "proto3";

package resources.livemap;

import "resources/livemap/livemap.proto";

option go_package = "github.com/galexrt/fivenet/gen/go/proto/resources/livemap;livemap";

message UsersUpdateEvent {
  repeated UserMarker added = 1;
  repeated UserMarker removed = 2;
  repeated UserMarker updated = 3;
}
